# finetuner

./: .gitignore  README.md  chat_format.txt  dev.dstack.yml  finetuner.py  hello.py  imcrazy.py  ollama_+_unsloth_+_llama_3_1.py  packs  prompt_format.txt  pyproject.toml  train.dstack.yml
