[project]
name = "finetune-unsloth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.6.0",
    "packaging>=24.1",
    "torch>=2.4.0",
    "unsloth[cu121-torch240]",
    "wandb>=0.17.8",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
