[project]
name = "finetune-unsloth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.43.3",
    "fire>=0.6.0",
    "peft>=0.12.0",
    "psutil>=6.0.0",
    "transformers>=4.44.2",
    "trl>=0.10.1",
    "unsloth[cu121-torch230]",
    "wandb>=0.17.8",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/rodrigomeireles/unsloth" }
